--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+  <div id="app">
+    <main>
+      <div class="main-container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae harum asperiores sequi id et quisquam repellat unde dolorum temporibus voluptatibus labore eaque laboriosam molestiae quibusdam numquam animi, voluptas maxime recusandae! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate maxime sequi, beatae voluptate veniam doloribus nostrum dignissimos blanditiis doloremque neque autem laboriosam illum dolores tempore aut minus illo, earum unde?</div>
+    </main>
+
+    <aside>
+      <div class="aside-container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni consequuntur maiores et neque repellat odio dicta aliquam natus. Minima eos quaerat accusamus harum inventore non, incidunt quibusdam reiciendis cum! Explicabo.</div>
+    </aside>
+  </div>
 </body>
 </html>
