--- a/index.html
+++ b/index.html
@@ -14,11 +14,36 @@
 <body>
   <div id="app">
     <main>
-      <div class="main-container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae harum asperiores sequi id et quisquam repellat unde dolorum temporibus voluptatibus labore eaque laboriosam molestiae quibusdam numquam animi, voluptas maxime recusandae! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate maxime sequi, beatae voluptate veniam doloribus nostrum dignissimos blanditiis doloremque neque autem laboriosam illum dolores tempore aut minus illo, earum unde?</div>
+      <div class="main-container">
+        <div class="back">
+          <img src="assets/icons/arrow-left-02.svg" alt="">
+          <span>Voltar</span>
+        </div>
+
+        <h1>Formulário de matrícula</h1>
+        <p>
+          Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.
+        </p>
+      </div>
     </main>
 
     <aside>
-      <div class="aside-container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni consequuntur maiores et neque repellat odio dicta aliquam natus. Minima eos quaerat accusamus harum inventore non, incidunt quibusdam reiciendis cum! Explicabo.</div>
+      <div class="aside-container">
+        <header>
+          <img src="assets/logo.svg" alt="Logo Estrelas do Amanhã">
+          <h2>
+            Porque cada momento de 
+            <span>
+              aprendizado
+            </span>
+             conta
+          </h2>
+
+          <p>Inscreva seu filho em nossa escola e veja-o florescer em um ambiente acolhedor, seguro e estimulante.</p>
+        </header>
+
+        <img src="assets/Illustration.svg" alt="Ilustração de professora e alunos">
+      </div>
     </aside>
   </div>
 </body>
