--- a/index.html
+++ b/index.html
@@ -123,11 +123,32 @@
             <div class="input-wrapper">
               <label for="mail">Email</label>
               <input type="email" id="mail" name="mail" required>
-              
+
               <div class="error">
                 <img src="assets/icons/alert-circle.svg" alt="Icone de alerta vermelho">
                 <span>Insira um e-mail válido</span>
               </div>
+            </div>
+          </fieldset>
+
+          <fieldset class="enroll-options">
+            <legend>Opções de matrícula</legend>
+
+            <div class="radio-wrapper">
+              <div class="radio-inner">
+                <div class="radio-image">
+                  <input type="radio" name="study-shift" value="morning" id="morning">
+                  <img src="assets/icons/sun-cloud-02.svg" alt="Ícone de sol com nuvem">
+                  <label for="morning">Manhã</label>
+                </div>
+              </div>
+
+              <div class="radio-inner">
+                <div class="radio-image">
+                  <input type="radio" name="study-shift" value="evening" id="evening">
+                  <img src="assets/icons/sun-02.svg" alt="Ícone de sol">
+                  <label for="evening">Tarde</label>
+                </div>
             </div>
           </fieldset>
         </form>
